# tinyrenderer

./: Cargo.toml
benches/: draw_benchmark.rs
src/: geometry.rs  gui.rs  lib.rs  main.rs  objloader.rs  renderer.rs  util.rs
